--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -1,13 +1,13 @@
 # run_dev.sh config
-CONFIG_IMAGE_KEY=ros2_humble
+CONFIG_IMAGE_KEY=ros2_humble.user.hdmi_input
 CONFIG_DOCKER_SEARCH_DIRS=/home/vschorp/dev/orx/orx_middleware/isaac_ros_common/docker
 BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
 ISAAC_ROS_WS=/home/vschorp/dev/orx/orx_middleware/ros2_ws
 
 # docker_deply.sh config
-# BASE_IMAGE_KEY=aarch64.ros2_humble.user.foxglove
-BASE_IMAGE_KEY=x86_64.ros2_humble
-DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-desktop-atracsys
+BASE_IMAGE_KEY=aarch64.ros2_humble.user.hdmi_input
+# BASE_IMAGE_KEY=x86_64.ros2_humble
+DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-jetson-hdmi_input
 ROS_WS=/home/vschorp/dev/orx/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=atracsys
-LAUNCH_FILE=fusion500_interface_docker.launch.py
+LAUNCH_PACKAGE=hdmi_input
+LAUNCH_FILE=hdmi_input.launch.py
